fixed location being behind footer

--- a/css/style.css
+++ b/css/style.css
@@ -167,15 +167,15 @@ body {
 	display: flex;
 	flex-direction: column;
     align-items: center;
-	margin-bottom: 3vh;
+	padding-bottom: 6vh;
 }
 
 footer {
 	display: grid;
-	position: absolute;
+
 	bottom: 0;
-	padding-top: 3vw;
-	padding-bottom: 3vw;
+	padding-top: 2vw;
+	padding-bottom: 2vw;
 	grid-template-columns: 1fr 1fr;
 	color: var(--yellow-color);
 	background: var(--red-color);
@@ -187,7 +187,7 @@ footer {
 	max-width: 15vw;
 	text-align: left;
 	padding-left: 3vw;
-	padding-top: 6vw;
+	padding-top: 11vh;
 }
 
 .footer-right {
